[gd_scene load_steps=3 format=2]

[ext_resource path="res://Info_Textbox.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0509804, 0.00392157, 0.00392157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.980392, 0.960784, 0.960784, 1 )

[node name="Info_Textbox" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -227.0
margin_right = -16.0
margin_bottom = -150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TextboxContainer"]
margin_right = 992.0
margin_bottom = 77.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
margin_right = 992.0
margin_bottom = 77.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 984.0
margin_bottom = 69.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 984.0
margin_bottom = 69.0

[node name="Symbol" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_top = 23.0
margin_right = 8.0
margin_bottom = 37.0
rect_min_size = Vector2( 8, 14 )
text = "*"

[node name="Text" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 976.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Text"
autowrap = true
clip_text = true

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
